--- a/class1/7.반복문_오하민/제어문_반복문.md
+++ b/class1/7.반복문_오하민/제어문_반복문.md
@@ -4,7 +4,9 @@
 - for, while, break, continue
 - do-while이 파이썬엔 없긴 한데 사실 필요한지 잘 모르겠음
 
+### while문
 
+- 원래는 while문 밖에 없었다
 
 ```java
 public class Test05 {
@@ -22,14 +24,33 @@ public class Test05 {
             System.out.println("이거 실행 됨??????"); //5번 출력되고 n==10
         	n++;
         //헷갈리면 내가 데이터가 되어 한줄씩 실행한다.
-        
-        
+	}
+}
+```
+
+### for문
+
+- while문을 만들다 보니 비슷하게 생김(변수초기화, 조건식, 내용, 변수의변화)
+- 그래서 만들었다.
+- while문은 for문으로 for문은 while문으로 변환 가능
+
+```java
+public class Test06 {
+    public static void main(String[] args){
         //만들다 보니 비슷하게 생김(변수초기화, 조건식, 내용, 변수의변화)
         //그래서 만들었다
         for(int i = 0; i < 5; i++){       //for(초기화; 조건; 변화){
             System.out.println("헤헤헿");  //    반복내용}
         }
-            
+    }
+}
+```
+
+### do-while문
+
+```java
+public class Test07 {
+    public static void main(String[] args){
         //do-while문은 조건을 나중에 평가하기 때문에 블록이 한번은 실행
         Scanner sc = new Scanner(System.in);
         int num = 0;
@@ -39,19 +60,27 @@ public class Test05 {
         }while( num != 0 );             //처음값은 0이었지만 입력값으로 바뀌기때문에
         System.out.println("끝");       //0이 입력되면 종료
         //조건식에서 사용하는 변수가 반복 내용 안에서 결정이 될 때 사용(while에서도 가능)
-            
+        
         //whlie문으로 바꾼다면
         int num = 1;
         while( num != 0 ){
             System.out.print("숫자 : ");
             num = sc.nextInt();
         }
+    }
+}
+```
+
+### break, continue
+
+```java
+public class Test08 {
+    public static void main(String[] args){
         
-            
         for(int i = 0; i < 10; i++){
-            System.out.println("헤헤");
             if ( i == 7 )
                 break; //반복문 종료
+            System.out.println(i); // 6까지 출력
         }
         
         for(int i = 0; i < 10; i++){
@@ -61,3 +90,5 @@ public class Test05 {
         }
     }
 }
+```
+
