--- a/class3/4. collection framework_김동욱/04.md
+++ b/class3/4. collection framework_김동욱/04.md
@@ -10,7 +10,7 @@
   - 고정된 크기의 자료구조
   - 배열이 대표적인 정적 자료구조
   - 선언 시 크기를 명시하면 바꿀 수 없음
-- 동적 자료구조 (Dynamic structure)
+- **동적 자료구조 (Dynamic structure)**
   - 요소의 개수에 따라 자료구조의 크기가 동적으로 증가하거나 감소
   - 리스트, 스택, 큐 등
 - 자료구조들의 종류는 결국은 어떤 구조에서 얼마나 빨리 원하는 데이터를 찾는가에 따라 결정된다.
@@ -24,9 +24,9 @@
 
 - 다수의 데이터를 쉽게 처리하는 방법 제공
 - collection framework 핵심 interface
-  - list - 순서가 있는 데이터의 집합, 순서가 있으므로 데이터의 중복을 허락(ArrayList, LinkedList)
-  - Set - 순서를 유지하지 않는 집합, 순서가 없어서 데이터 구별 x -> 중복 허락하지 않음(HashSet, TreeSet), (값 자체가 key임)
-  - Map - key와 value의 쌍으로 데이터를 관리하는 집합, 순서는 없고 key의 중복 불가, value는 중복가능(hashMap, TreeMap), 키로 구분(키는 객체일 수 있다.)(파이썬에서 dict)
+  - **list -** 순서가 있는 데이터의 집합, 순서가 있으므로 데이터의 중복을 허락(ArrayList, LinkedList)
+  - **Set** - 순서를 유지하지 않는 집합, 순서가 없어서 데이터 구별 x -> 중복 허락하지 않음(HashSet, TreeSet), (값 자체가 key임)
+  - **Map** - key와 value의 쌍으로 데이터를 관리하는 집합, 순서는 없고 key의 중복 불가, value는 중복가능(hashMap, TreeMap), 키로 구분(키는 객체일 수 있다.)(파이썬에서 dict)
 
 #### 4-3. collection interface
 
@@ -37,26 +37,26 @@
 
 - 특징: 순서가 있고, 중복을 허용 (배열과 유사하지만 얘는 가변길이가 된다.)
 - 구현 클래스
-  - ArrayList
+  - **ArrayList**
   - 결과가 될 길이만큼의 리스트를 새로 만들고 복사 붙이기한다.
-  - 큰집이 필요하면 큰집짓고 이사, 작은집필요하면 작은집으로 이사
+  - **큰집이 필요하면 큰집짓고 이사, 작은집필요하면 작은집으로 이사**
   - 추가, 삭제 => 불리, 탐색 => 유리
   - ![image-20220518221249599](04.assets/image-20220518221249599.png)
-  - LinkedList
+  - **LinkedList**
   - 다음놈을 가리키는 포인터만 쓱쓱 바꿔줌
   - ![image-20220518221515073](04.assets/image-20220518221515073.png)
   - 추가 삭제 => 유리, 탐색 => 불리
 - 내부적으로 배열을 이용해 데이터를 관리
 - 배열과 다르게 크기가 유동적으로 변함 (동적 자료구조)
-- 크기가 실제로 1.5배씩 증가(부족할 때)
+- **크기가 실제로 1.5배씩 증가**(부족할 때)
 - 배열을 다루는 것과 유사하게 사용할 수 있음
 - 순서가 있어 조회가 순서와 관련됨
 - ![image-20220518221726582](04.assets/image-20220518221726582.png)
 - 배열과 ArrayList
-  - 배열의 장점
+  - **배열의 장점**
     - 가장 기본적인 형태의 자료 구조, 간단하며 사용이 쉬움
     - 접근 속도가 빠름
-  - 배열의 단점
+  - **배열의 단점**
     - 크기를 변경할 수 없어 추가 데이터를 위해 새로운 배열을 만들고 복사 해야함
     - 비 순차적 데이터의 추가, 삭제에 많은 시간이 걸림
   - 배열을 사용하는 ArrayList도 태생적으로 배열의 장/단점을 그대로 가져감
@@ -70,7 +70,7 @@
 
 #### 4-5. Set
 
-- 특징 - 순서가 없고, 중복을 허용하지 않음
+- 특징 - **순서가 없고, 중복을 허용하지 않음**
 - 장점 - 빠른 속도, 효율적인 중복 데이터 제거 수단
 - 단점 : 단순  집합의 개념으로 정렬하려면 별도의 처리가 필요
 - 구현 클래스
@@ -78,7 +78,7 @@
   - TreeSet
 - ![image-20220518224616213](04.assets/image-20220518224616213.png)
 - 중복된 값이 하나만 나온다.
-- Hash
+- **Hash**
   - mapping 함수 (input이 있으면 output(크기가 일정)으로 매핑)
   - 같은 데이터가 들어가면 같은 값이 나온다
   - 다른게 들어가면 다른 게 나온다(너무 많아지면 같은 게 나올 수도 있지만 최대한 안나오게 한다. (sha 512 =  2 ^ 512))
