--- a/CS/컴구/class1/김동욱/1장-디지털-논리-회로-및-강의소개.md
+++ b/CS/컴구/class1/김동욱/1장-디지털-논리-회로-및-강의소개.md
@@ -47,7 +47,6 @@
 - ![image-20220620154437929](1장-디지털-논리-회로-및-강의소개.assets/image-20220620154437929.png)
 - ![image-20220620154446998](1장-디지털-논리-회로-및-강의소개.assets/image-20220620154446998.png)
 - ![image-20220620155226341](1장-디지털-논리-회로-및-강의소개.assets/image-20220620155226341.png)
-
 - 사용 이유
   - 변수 사이의 진리표 관계를 대수적으로 표시
   - 논리도의 입출력 관계를 대수 형식을 표시
@@ -59,6 +58,11 @@
   - 결합법칙
   - 드모르간 법칙
 - ![Figure 4. Simplify logic equations using Boolean algebra](1장-디지털-논리-회로-및-강의소개.assets/3053ab0e02a104e287056418ea071d56.svg)
+- ![image-20220623140825955](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140825955.png)
+- ![image-20220623140837177](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140837177.png)
+- ![image-20220623140841460](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140841460.png)
+- ![image-20220623140849599](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140849599.png)
+- ![image-20220623140854728](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140854728.png)
 
 
 ### 맵의 간소화 (Karnaugh Map)
@@ -98,6 +102,8 @@
     - ![img](1장-디지털-논리-회로-및-강의소개.assets/247EC04158A97D291F.gif)
     - ![img](1장-디지털-논리-회로-및-강의소개.assets/Full-Adder-K-maps-Boolean-Expression.png)
     - ![img](1장-디지털-논리-회로-및-강의소개.assets/256B0F4458A97D2935.jpeg)
+    - ![image-20220623140907045](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140907045.png)
+    - ![image-20220623140911572](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140911572.png)
 
 
 ### 플립플롭 (Flip-Flop)
@@ -111,21 +117,22 @@
   - ![img](1장-디지털-논리-회로-및-강의소개.assets/Dflip-flop.png)
   - ![img](1장-디지털-논리-회로-및-강의소개.assets/Tflip-flop.png)
   - ![img](1장-디지털-논리-회로-및-강의소개.assets/JKflip-flop.png)
+  - ![image-20220623140935285](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140935285.png)
   - 모서리 변이형 플립플롭(Edge-triggered FF)
     - 입력값의 변화 모서리에서만 동작
       - Upward triggered FF
         - 입력값이 상향일 경우에만 동작(0 -> 1)
         - ![img](1장-디지털-논리-회로-및-강의소개.assets/clkTFF.gif)
-
+  
       - Downward triggered ff
         - 입력값이 하향일 경우에만 동작(1 -> 0)
         - ![img](1장-디지털-논리-회로-및-강의소개.assets/clkDFF.gif)
-
+  
     - 올바른 동작을 위해서는 최소의 신호 유지 시간 필요
       - Setup time
         - 출력 변화를 위하여 입력이 유지되어야 하는 최소 시간
         - 0.4 ms 정도
-
+  
       - Hold time
         - 출력 유지를 위하여 입력이 바뀌지 않아야 하는 최소 시간
         - 출력이 바뀌고 나서도 hold time보다 적은 시간 안에 바껴버리면 안됨
@@ -155,8 +162,9 @@
   - ![computer-organization sequential-circuits](1장-디지털-논리-회로-및-강의소개.assets/sequential-circuits6.png)
   - ![computer-organization sequential-circuits](1장-디지털-논리-회로-및-강의소개.assets/sequential-circuits7.png)
   - ![computer-organization sequential-circuits](1장-디지털-논리-회로-및-강의소개.assets/sequential-circuits8.png)
+  - ![image-20220623140947434](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140947434.png)
 
-
+![image-20220623140952085](1장-디지털-논리-회로-및-강의소개.assets/image-20220623140952085.png)
 
 
 
