--- a/CS/컴구/class1/김동욱/2장-디지털-부품.md
+++ b/CS/컴구/class1/김동욱/2장-디지털-부품.md
@@ -18,16 +18,21 @@
   - TTL: Transister-Transistor Logic, 일반 로직 회로 부품
   - ECL: Emiiter-Coupled Logic, 고속 논리 시스템용 부품(1~2ns 이하), 슈퍼컴퓨터용
   - MOS: Metal Oxide Semi. , 고밀도 집적회로용 부품
-  - COMS: Complement MOS, 고밀도 회로, 단순한 제조공정, 저전력 특성
+  - CMOS: Complement MOS, 고밀도 회로, 단순한 제조공정, 저전력 특성
 
 
 ### 디코더 (Decoders)
 
 - N 비트의 이진 정보를 서로 다른 2^N 개의 원소 정보로 출력
+- 적은 수의 입력 단자로 수많은 표현
+- ![image-20220623115836506](2장-디지털-부품.assets/image-20220623115836506.png)
+- ![image-20220623115848472](2장-디지털-부품.assets/image-20220623115848472.png)
+- ![img](2장-디지털-부품.assets/99B35F3359B488DB2A.png)
+- 입력 포트의 최소화
+
 - 2개의 입력 -> 4가지 출력: 2x4 decoder
 - 3개의 입력 -> 8가지 출력: 3x8 decoder
 - ![img](2장-디지털-부품.assets/3-to-8-binary-decoder-00-1551699806-16557372307223.jpg)
-
 - 8개의 기계 중에 하나만 켠다
 - NAND 게이트로 이루어진 디코더
   - 보수화된 출력이 더 경제적임
@@ -37,6 +42,7 @@
   - CMOS 회로의 영향으로 저전력 회로에 유리
 - 인코더
   - 디코더와 반대 동작 수행
+  - ex) 컴퓨터가 읽을 수 있게 2진수로 바꿔줄 때 1번버튼은 001로 7번 버튼은 111로 읽도록
   - 2^n 입력에 대하여 N 이진 코드 출력
   - 한번에 하나의 입력만이 1의 값을 가질 수 있다.
   - ![priority encoder](2장-디지털-부품.assets/combination-comb12.gif)
@@ -45,6 +51,7 @@
 
 - 정의
   - N개의 선택 입력에 따라서 2^n 개의 출력을 하나의 출력에 선택적으로 연결
+  - 입력을 여러개 받는데 그 중에 입력받을 내용을 선택하는 것
   - 다중 입력 중 하나를 선택하여 출력으로 연결
   - 네트워크 스위치(전화, LAN, WAN)의 기본 구조 요소
   - ![basic multiplexer switch](2장-디지털-부품.assets/combination-multiplexer1.gif)
@@ -56,13 +63,16 @@
 - 구성
   - N비트 레지스터: N비트의 이진 정보 저장
   - N개의 플립플롭과 조합회로로 구성
+- 추가내용
+  - 한 번에 여러비트를 읽고 쓸 수 있는 능력
+  - 메모리 주소방식과 비슷하게 어드레스를 사용해서 특정 레지스터를 선택할 수 있음
+  - 다양한 용도의 레지스터가 있고, cpu에 레지스터는 데이터를 일시적으로 저장하는 공간이라 보면됨
 
 - 기본 레지스터
   - 클럭펄스 타이밍에 입력값이 레지스터에 저장
   - 레지스터에 저장된 값은 항상 출력에서 참조 가능
   - Clear, Clock(wrtie) 입력 제공
   - ![img](2장-디지털-부품.assets/c0098890_4a1bd886b49d3.jpg)
-
 - 병렬로드 가능한 4비트 레지스터
   - 4비트의 데이터를 동시에 입력 가능
   - Load, Clock 입력 제공
@@ -83,7 +93,8 @@
   - 공통의 clock이 다음 상태로의 이동 제어
   - shift right
   - ![img](2장-디지털-부품.assets/image001.gif)
-
+  - ![img](2장-디지털-부품.assets/RingTT-copy.jpg)
+  
 - 병렬로드를 가지는 양방향 시프트 레지스터(General Register)
   - 병렬로드, 왼쪽/오른쪽 시프트, 병렬출력 기능
   - 동기화된 clock에 의하여 동작
@@ -127,12 +138,22 @@
   - N 비트의 입력/ 출력(word 크기와 동일)
   - K개의 주소 라인으로 2^k개 word 중 하나를 선택
   - 읽기/쓰기 지정(R/W)
+  - ![image-20220623124729560](2장-디지털-부품.assets/image-20220623124729560.png)
+    - 2주소 비트와 3데이터 비트로 구성된 메모리 배열, 2주소 비트는 배열에서 4행 중 하나를 지시한다. 각 데이터 워드는 3비트 폭이다. 배열의 깊이(4)는 행의 수이고 폭은 열의 수로서 워드 크기라고 한다. 배열의 크기는 깊이 * 폭으로 주어진다. 따라서 위의 그림은 4워드 * 3비트 배열 또는 4 * 3 배열이라고 한다.
+  - ![image-20220623124854490](2장-디지털-부품.assets/image-20220623124854490.png)
+  - 5.40은 1024워드(10비트 Address로 1024 words 구분가능) * 32비트(워드 크기) 배열
   - ![Random Access Memory](2장-디지털-부품.assets/random-access-memory-1.png)
+  - **32비트와 64비트의 가장 큰 차이는 메모리 인식 용량**이다. 즉, 메모리를 인식해서 처리할 수 있는 양이 서로 다르다. 좀 더 쉽게 말하면 한번에 몇 비트를 처리할 수 있느냐이다. 물론 숫자가 더 큰 64비트가 메모리를 더 많이 처리할 수 있다. 1비트로 나타낼 수 있는 숫자는 0, 1로 두개이므로, 32비트로 나타낼 수 있는 숫자의 갯수는 2의 32승으로 4,294,967,296개다. 따라서 32비트는 주소공간으로 4,294,967,296개를 사용할 수 있는데, 주소 공간 하나당 1Byte이므로 2^32B = 4(2^30)B = 4GB의 메모리를 한번에 인식해서 처리한다. 
+  - 반면 64비트로는 2의 64승은 (2^4)(2^60)B = 16EB로 4GB와는 비교할 수 없을 정도로 큰 메모리 인식 용량을 가진다. (이론상 수치와 실제적 수치는 차이가 있다고는 하지만.. ) 아무튼 32비트 운영체제보다는 64비트 운영체제가 한번에 많은 메모리를 인식하기에 좀 더 빠르게 일을 처리할 수 있는 것이다. 
 - ROM(Read Only Memory)
   - 한 번 저장된 데이터를 읽기만 가능
-  - 1 word가 N비트이고 M워드를 저장하는 N * M ROM
+  - 1 word가 N비트이고 M워드를 저장하는M * N ROM
   - ROM에 저장된 M word를 접근할 수 있는 K개의 주소입력 (2^k = M)
-  - ![image-20220621164331062](2장-디지털-부품.assets/image-20220621164331062.png)
+    - n개 입력변수로 가질 수 있는 주소의 수 2 ^ n
+  - ![img](2장-디지털-부품.assets/TZ7dy1i.jpg)
+  - ![img](2장-디지털-부품.assets/J0YeQEC.jpg)
+    - 인풋이 5비트 -> 32개의 워드, 출력이 8비트 -> 1워드의 크기가 8비트
+    - --> 32(워드의 수) X 8(1워드의 크기) ROM
 - ROM의 종류
   - Mask Rom: Lithography 방식으로 구워져 나오는 ROM
   - PROM : 한번만 프로그램 가능
