--- a/CS/컴구/class1/김동욱/3장-데이터의-표현.md
+++ b/CS/컴구/class1/김동욱/3장-데이터의-표현.md
@@ -7,7 +7,6 @@
   - 산술 연산용 숫자(Numeric)
   - 데이터 처리용 영문자(Alpha)
   - 특수 목적용 기호(Special)
-
 - 진수와 진법
   - radix : 진법의 기수에 해당(10, 2, 8, 16---)
   - 10진수
@@ -21,11 +20,9 @@
 
   - 16진수
     - F3 = F x 16^1 + 3 x 16^0  = 243
-
 - ![computer-organization-data-representation](3장-데이터의-표현.assets/computer-organization-data-representation1.png)
 - ![computer-organization-data-representation](3장-데이터의-표현.assets/computer-organization-data-representation2.png)
 - 2진화 8진수(Octal)
-
 - ![computer-organization-data-representation](3장-데이터의-표현.assets/computer-organization-data-representation3.png)
 - 2진화 16진수(Hexadecimal)
   - ![computer-organization-data-representation](3장-데이터의-표현.assets/computer-organization-data-representation4.png)
@@ -37,7 +34,15 @@
   - ![img](3장-데이터의-표현.assets/1024px-USASCII_code_chart.png)
   - EBCDIC Code : 16bits, IBM internal code
   - UniCode: 16bits/32bits
+  - utf-8 인코딩 방식
+  - 풀네임은 Unicode Transformation Format - 8bit 8의미는 8비트 1바이트를 기준으로 
+    인코딩한다는 의미이다.
+  - 1byte 표현 영역에 들어있는 수는 0으로 시작, 2byte 표현 영역에 있는 수는 110, 10으로 시작
+  - 3byte 표현 영역에 들어있는 수는 1110, 10, 10 으로 시작
+  - 4byte 표현 영역에 들어있는 수는 11110으로 시작
+  - 이것이 약속
   - ![UTF-8 encoding](3장-데이터의-표현.assets/sQuKr.png)
+  - ![img](3장-데이터의-표현.assets/images%2Fjosworks27%2Fpost%2Ff04cc926-8f89-4d55-946d-e76e212a2642%2F스크린샷 2020-04-04 10.48.22.png)
   - ![Enter image description here](3장-데이터의-표현.assets/6C0C6.png)
 - Special Communication Data
   - Morse Code
@@ -63,6 +68,7 @@
 
 - 부호 없는 숫자의 뺄셈
   - ![image-20220621180733882](3장-데이터의-표현.assets/image-20220621180733882.png)
+  - ![image-20220623141014607](3장-데이터의-표현.assets/image-20220623141014607.png)![image-20220623141019814](3장-데이터의-표현.assets/image-20220623141019814.png)![image-20220623141023730](3장-데이터의-표현.assets/image-20220623141023730.png)
 
 
 ## [제 3장 Part-2](https://www.youtube.com/watch?v=bysGzutpRgc&list=PLc8fQ-m7b1hCHTT7VH2oo0Ng7Et096dYc&index=7)
