--- a/CS/컴구/class1/김동욱/2장-디지털-부품.md
+++ b/CS/컴구/class1/김동욱/2장-디지털-부품.md
@@ -28,7 +28,7 @@
 - ![image-20220623115836506](2장-디지털-부품.assets/image-20220623115836506.png)
 - ![image-20220623115848472](2장-디지털-부품.assets/image-20220623115848472.png)
 - ![img](2장-디지털-부품.assets/99B35F3359B488DB2A.png)
-- 입력 포트의 최소화
+- **입력 포트의 최소화**
 
 - 2개의 입력 -> 4가지 출력: 2x4 decoder
 - 3개의 입력 -> 8가지 출력: 3x8 decoder
@@ -64,7 +64,7 @@
   - N비트 레지스터: N비트의 이진 정보 저장
   - N개의 플립플롭과 조합회로로 구성
 - 추가내용
-  - 한 번에 여러비트를 읽고 쓸 수 있는 능력
+  - 한 번에 **여러비트를 읽고 쓸 수 있는 능력**
   - 메모리 주소방식과 비슷하게 어드레스를 사용해서 특정 레지스터를 선택할 수 있음
   - 다양한 용도의 레지스터가 있고, cpu에 레지스터는 데이터를 일시적으로 저장하는 공간이라 보면됨
 
@@ -73,10 +73,10 @@
   - 레지스터에 저장된 값은 항상 출력에서 참조 가능
   - Clear, Clock(wrtie) 입력 제공
   - ![img](2장-디지털-부품.assets/c0098890_4a1bd886b49d3.jpg)
-- 병렬로드 가능한 4비트 레지스터
+- 병렬**로**드 가능한 4비트 레지스터
   - 4비트의 데이터를 동시에 입력 가능
   - Load, Clock 입력 제공
-  - Load가 1일 때만 저장이 가능
+  - **Load가 1일 때만 저장이 가능**
   - clear는 생략되어있음(그림에서)
   - ![ch6-1.gif](2장-디지털-부품.assets/ch6-1.gif)
 
